src/test/ui/mismatched_types/trait-bounds-cant-coerce.stderr
error[E0308]: mismatched types
  --> $DIR/trait-bounds-cant-coerce.rs:24:7
   |
24 |     a(x); //~ ERROR mismatched types [E0308]
   |       ^ expected trait `Foo + std::marker::Send`, found trait `Foo`
   |
   = note: expected type `Box<Foo + std::marker::Send + 'static>`
              found type `Box<Foo + 'static>`

error: aborting due to previous error

